--- a/Skeleton/imdb-php/css/style.css
+++ b/Skeleton/imdb-php/css/style.css
@@ -10,3 +10,10 @@
     color: #000;
     background-color: #ffc107;
 }
+
+footer, nav {
+    margin: 0;
+    padding-left: 0;
+    padding-right: 0;
+}
+
