--- a/Skeleton/imdb-php/css/style.css
+++ b/Skeleton/imdb-php/css/style.css
@@ -11,9 +11,30 @@
     background-color: #ffc107;
 }
 
+#backToTopBtn {
+    background-color: white;
+    color: black;
+    border: 1px solid #ccc;
+    padding: 8px 20px;
+    border-radius: 25px;
+    font-weight: 500;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+    transition: all 0.2s ease-in-out;
+}
+
+#backToTopBtn:hover {
+    background-color: #f2f2f2;
+    color: black;
+}
+
+
 footer, nav {
     margin: 0;
     padding-left: 0;
     padding-right: 0;
+}
+
+main {
+    margin-top: 70px;
 }
 
