--- a/Skeleton/imdb-php/css/style.css
+++ b/Skeleton/imdb-php/css/style.css
@@ -31,6 +31,10 @@ html {
     scroll-behavior: smooth;
 }
 
+.section-margin {
+    margin-left: 100px;
+    margin-right: 100px;
+}
 
 footer, nav {
     margin: 0;
@@ -39,6 +43,6 @@ footer, nav {
 }
 
 main {
-    margin-top: 70px;
+    margin-top: 50px;
 }
 
