--- a/Skeleton/imdb-php/css/style.css
+++ b/Skeleton/imdb-php/css/style.css
@@ -135,11 +135,13 @@ footer, nav {
     padding-right: 0;
 }
 
-main {
-    margin-top: 50px;
+/*Responsive web*/
+@media (max-width: 992px) { /* Bootstrap breakpoint for lg and below */
+    .navbar.fixed-top {
+        position: static !important;
+    }
 }
 
-/*Responsive web*/
 @media (max-width: 768px) {
     .scroll-wrapper {
         width: 100% !important;
