--- a/INFO263 FINAL/imdb-skeleton/imdb-php/css/style.css
+++ b/INFO263 FINAL/imdb-skeleton/imdb-php/css/style.css
@@ -60,10 +60,7 @@ footer {
     background: white;
     border: 1px solid #ccc;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    max-height: 400px;
-    overflow-y: auto;
 }
-
 
 #autocomplete-list div {
     cursor: pointer;
@@ -118,4 +115,7 @@ input::-webkit-search-results-decoration {
 .suggestion-detail {
     font-size: 0.9em;
     color: gray;
+}
+html {
+    scroll-behavior: smooth;
 }
