--- a/info263-final/imdb-skeleton/imdb-react/src/app/css/style.css
+++ b/info263-final/imdb-skeleton/imdb-react/src/app/css/style.css
@@ -1,7 +1,11 @@
-/* Navigation */
+/* Navigation.
+
+IMPORTANT: Change the styling for the navigation — choose your own colours and other parameters!!!
+
+*/
 
 .nav-link:hover,
-.navbar-brand:hover{
+.navbar-brand:hover {
     color: #000;
     background-color: #cc9a06;
 }
@@ -9,4 +13,109 @@
 .bg-yellow-500 {
     color: #000;
     background-color: #ffc107;
+}
+
+footer {
+    background-color: #ffc107;
+}
+
+/* For the index page. */
+.img-banner {
+    width: 50vw; /* This means 25% of the viewport. */
+}
+
+
+
+/* Insert other style definitions here. */
+
+/*Back to top button*/
+#backToTopBtn {
+    background-color: white;
+    color: black;
+    border: 1px solid #ccc;
+    padding: 8px 20px;
+    border-radius: 25px;
+    font-weight: 500;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+    transition: all 0.2s ease-in-out;
+}
+
+#backToTopBtn:hover {
+    background-color: #f2f2f2;
+    color: black;
+}
+
+/* For autosearch */
+.search-wrapper {
+    position: relative;
+    width: 100%;
+}
+
+#autocomplete-list {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%; /* match input width */
+    z-index: 999;
+    background: white;
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+#autocomplete-list div {
+    cursor: pointer;
+}
+
+#autocomplete-list div:hover {
+    background-color: #f1f1f1;
+}
+
+#autocomplete-list div:last-child {
+    border-bottom: none;
+}
+
+.visually-hidden {
+    position: absolute !important;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
+
+
+input::-webkit-calendar-picker-indicator,
+input::-webkit-search-decoration,
+input::-webkit-search-cancel-button,
+input::-webkit-search-results-button,
+input::-webkit-search-results-decoration {
+    display: none;
+}
+.autocomplete-item {
+    display: flex;
+    align-items: center;
+    padding: 8px;
+    cursor: pointer;
+}
+.autocomplete-item img {
+    width: 40px;
+    height: auto;
+    margin-right: 10px;
+}
+.autocomplete-text {
+    display: flex;
+    flex-direction: column;
+}
+.suggestion-title {
+    font-weight: bold;
+}
+.suggestion-detail {
+    font-size: 0.9em;
+    color: gray;
+}
+html {
+    scroll-behavior: smooth;
 }
